--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root" style=" margin-left: 143px; margin-right: 143px; "></div>
 </body>
 
 <script type="module" src="./src/App.js"></script>
